# evolution

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  creature.h  main.cpp  ui.cpp
include/: creature.h  property.h  utils.h  world.h
ui/: ui.cpp  ui.h
